Not possible to add shortcuts to menus from right click. #58729

Closed
opened 2018-12-04 17:38:44 +01:00 by Jean Da Costa · 7 comments

System Information
any system

Blender Version
any blender version

Short description of error
Its not possible to right click on a menu and add a shortcut to it, you have to know the bl_idname of that menu and its not exposed by hovering the mouse on it, besides all blender versions have been with this problem, it can be considered a bug,

Exact steps for others to reproduce the error
Right click on a button and click change shortcut, It works!
Now Right click on a menu, no option appears.
image.png

**System Information** any system **Blender Version** any blender version **Short description of error** Its not possible to right click on a menu and add a shortcut to it, you have to know the bl_idname of that menu and its not exposed by hovering the mouse on it, besides all blender versions have been with this problem, it can be considered a bug, **Exact steps for others to reproduce the error** Right click on a button and click change shortcut, It works! Now Right click on a menu, no option appears. ![image.png](https://archive.blender.org/developer/F5813301/image.png)
Author

Added subscriber: @jeacom

Added subscriber: @jeacom

Added subscribers: @WilliamReynish, @ideasman42, @dfelinto

Added subscribers: @WilliamReynish, @ideasman42, @dfelinto

This is more of a TODO than a bug. As you said yourself it has always been like this.
It is doable with a hack, using the WM_OT_call_menu operator to call the menu. Not sure if it makes sense though/

@ideasman42 / @WilliamReynish what do you say? Should be added to UI papercuts?

This is more of a TODO than a bug. As you said yourself it has always been like this. It is doable with a hack, using the *WM_OT_call_menu* operator to call the menu. Not sure if it makes sense though/ @ideasman42 / @WilliamReynish what do you say? Should be added to UI papercuts?

Sure, if this can be done in a reasonable way, that sounds good to add.

Sure, if this can be done in a reasonable way, that sounds good to add.

We'd need to have special support for this kind of button.

This is more a regular todo (applies to 2.7x too)

We'd need to have special support for this kind of button. This is more a regular todo (applies to 2.7x too)

This issue was referenced by d132c44652

This issue was referenced by d132c446528ed003662945ee686417499a4d6319

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58729
No description provided.